// DBML v4
// Notes:
// - Based on v3 schema
// - Added messaging + global Q&A tables
// - Money types use decimal(12,2)
// - Naming consistency/typos fixed
// - Transactions enforce exactly one source reference
//   (request_id OR private_expense_id OR group_expense_id OR funding_participant_id OR income_id)
// - Constraints and indexes are implemented in MongoDB validators + indexes via schema-setup.js

Table users {
  id int [pk, increment]
  username varchar [not null, unique]
  email varchar [not null, unique]
  password varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  age int
  verification_code int
  created_at timestamp [not null]
}

Table income {
  id int [pk, increment]
  bank_account_id int [not null]
  amount decimal(12,2) [not null]
  info text
  state varchar
  cycle varchar
  pay_date timestamp
  created_at timestamp [not null]
}

Table depots {
  id int [pk, increment]
  user_id int [not null]
  created_at timestamp
}

Table groups {
  id int [pk, increment]
  name varchar [not null]
  info varchar
  address varchar
  created_at timestamp [not null]
}

Table group_members {
  id int [pk, increment]
  user_id int [not null]
  group_id int [not null]
  role varchar [not null]
  status varchar
}

Table bank_accounts {
  id int [pk, increment]
  user_id int [not null]
  balance decimal(12,2) [not null, default: 0]
  created_at timestamp [not null]
}

Table private_expenses {
  id int [pk, increment]
  bank_account_id int [not null]
  amount decimal(12,2) [not null]
  theo_amount decimal(12,2) [not null]
  info text
  state varchar
  cycle varchar
  pay_date timestamp
  created_at timestamp [not null]
}

Table group_expenses {
  id int [pk, increment]
  group_funding_id int [not null]
  amount decimal(12,2) [not null]
  info text
  state varchar
  cycle varchar
  pay_date timestamp
  created_at timestamp [not null]
}

Table requests {
  id int [pk, increment]
  from_bank_account_id int [not null]
  to_bank_account_id int [not null]
  private_expense_id int
  amount decimal(12,2) [not null]
  due_date timestamp
  info varchar
  category varchar
  status varchar [not null]
  cycle varchar
  pay_date timestamp
  created_at timestamp [not null]
}

Table transactions {
  id int [pk, increment]
  private_expense_id int
  request_id int
  funding_participant_id int
  group_expense_id int
  income_id int
  created_at timestamp [not null]
}

Table shares {
  id int [pk, increment]
  depot_id int [not null]
  symbol varchar [not null]
  units decimal(12,4) [not null]
  bought_at timestamp [not null]
  bought_for decimal(12,2) [not null]
}

Table budgets {
  id int [pk, increment]
  user_id int [not null]
  category varchar
  target_amount decimal(12,2) [not null]
  current_amount decimal(12,2) [not null]
  reset_date timestamp
  created_at timestamp [not null]
}

Table group_activities {
  id int [pk, increment]
  group_id int [not null]
  info varchar
  date timestamp
  created_at timestamp [not null]
}

Table group_funding {
  id int [pk, increment]
  group_id int [not null]
  group_activity_id int [not null]
  amount decimal(12,2)
  info varchar
  created_at timestamp [not null]
}

Table funding_participants {
  id int [pk, increment]
  bank_account_id int [not null]
  group_funding_id int [not null]
  amount decimal(12,2)
  created_at timestamp [not null]
}

Table private_message {
  id int [pk, increment]
  from_user_id int [not null]
  to_user_id int [not null]
  message varchar
  status varchar
  edited bool
  created_at timestamp
}

Table group_message {
  id int [pk, increment]
  from_user_id int [not null]
  group_id int [not null]
  message varchar
  status varchar
  edited bool
  created_at timestamp
}

Table global_questions {
  id int [pk, increment]
  from_user_id int [not null]
  thema varchar
  message varchar
  answered bool
  edited bool
  created_at timestamp
}

Table question_likes {
  id int [pk, increment]
  user_id int [not null]
  question_id int [not null]
  created_at timestamp
}

Table global_answers {
  id int [pk, increment]
  question_id int [not null]
  from_user_id int [not null]
  message varchar
  edited bool
  created_at timestamp
}

Table answer_likes {
  id int [pk, increment]
  answer_id int [not null]
  user_id int [not null]
  created_at timestamp
}

Ref: group_activities.group_id > groups.id

Ref: funding_participants.group_funding_id > group_funding.id
Ref: funding_participants.bank_account_id > bank_accounts.id

Ref: group_funding.group_id > groups.id
Ref: group_funding.group_activity_id > group_activities.id

Ref: group_members.group_id > groups.id
Ref: group_members.user_id > users.id

Ref: budgets.user_id > users.id

Ref: bank_accounts.user_id > users.id

Ref: depots.user_id > users.id

Ref: private_expenses.bank_account_id > bank_accounts.id

Ref: group_expenses.group_funding_id > group_funding.id

Ref: income.bank_account_id > bank_accounts.id

Ref: requests.from_bank_account_id > bank_accounts.id
Ref: requests.to_bank_account_id > bank_accounts.id
Ref: requests.private_expense_id > private_expenses.id

Ref: transactions.funding_participant_id > funding_participants.id
Ref: transactions.request_id > requests.id
Ref: transactions.group_expense_id > group_expenses.id
Ref: transactions.private_expense_id > private_expenses.id
Ref: transactions.income_id > income.id

Ref: shares.depot_id > depots.id

Ref: private_message.from_user_id > users.id
Ref: private_message.to_user_id > users.id

Ref: group_message.from_user_id > users.id
Ref: group_message.group_id > groups.id

Ref: global_questions.from_user_id > users.id

Ref: global_answers.question_id > global_questions.id
Ref: global_answers.from_user_id > users.id

Ref: question_likes.user_id > users.id
Ref: question_likes.question_id > global_questions.id

Ref: answer_likes.answer_id > global_answers.id
Ref: answer_likes.user_id > users.id
